worked on macaron page a bit more, added closetshare basics

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
       <section id = "projects">
         <h1>Featured Projects </h1>
         <div id = "project-list">
+          <div class = "project" id = "closetshare">
+            <img id = "closet-picture" src="resources/closetshare.png" alt="closetshare title slide"></img>
+            <div class = "project-right">
+              <div class = "project-title">
+                <h2>ClosetShare</h2>
+                <p>/2024</p>
+              </div>
+              <p>A cross-platform social app developed using React Native that helps and encougages users to improve their own fashion sense, find their own unique style, and form fashion communities.</p>
+              <button class = "button" onclick="toClosetShare()"> Explore </button>
+            </div>
+          </div> <!-- closetshare -->
+
           <div class = "project" id = "rabbitat">
             <img id = "rabbitat-picture" src="resources/rabbitat.png" alt="rabbitat poster picture"></img>
             <div class = "project-right">
@@ -83,7 +95,7 @@
               <p>A brand and website created from scratch. The website aim to provide a seamingless and satisfying macaron purchase experience, while preserving its visual identity. Lastest standout project where I've put my programming skills into use</p>
               <button class = "button" onclick="toMacaron()"> Explore </button>
             </div>
-          </div> <!-- rabbitat -->
+          </div> <!-- macaron -->
 
         </div> <!-- Project list -->
       </section> <!-- Project SECTION -->
