--- a/macaron.html
+++ b/macaron.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Rabbitats Website Redesign || Howard Chang </title>
+    <title>Macaron Website Development || Howard Chang </title>
     <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -108,13 +108,26 @@
       <h1>Final Website Highlights </h1>
       <div id = "macaron-final-website-highlight-image-container" class = "highlight-area">
       </div>  
+
+      <div id = "macaron-share-prototype" class = "highlight-area ">
+        <h3>Check out the project!</h3>
+        <div>
+          <button class = "button" onclick="toMacaronGitHub()"> GitHub Repository</button>
+        </div>
+      </div>
     </section>
 
     <!--------------------------WEBSITE IDEA AND MY ROLE //-------------------------------------------------->
     <section id = "website-idea-and-my-role">
       <h1>Website Idea and My role</h1>
+      <div class = "sub-section">
+        <p>For this two person project, while my partner concentrated on crafting a strong and distinctive brand identity through the 
+          creation of the logo, supporting visuals, and selecting cohesive colors and fonts, my role focused more so on <strong>web design and 
+          development, as well as create an user experience that aligns seamlessly with said brand's identity.</strong>
+        </p>
 
-      <div class = "sub-section highlight-area flex-area">
+      </div>
+      <div id = "macaron-brand-description" class = "sub-section highlight-area">
         <div>
           <h2 class = "highlight-area-title">The Brand: Macaron</h2>
           <p>
@@ -129,7 +142,11 @@
             reliability - if the website looks so good, imagine how good the macarons taste...
           </p>
         </div>
-        <img id = "macaron-mascot" src="resources/macaron/macaron-mascot-fullbody.png" alt="Macaron's mascot"></img>
+        <div id = "macaron-mascot-container">
+          <img id = "macaron-mascot" src="resources/macaron/macaron-mascot-fullbody.png" alt="Macaron's mascot"></img>
+          <figcaption>Macaron website mascot, by Kate Simeonoff</figcaption>
+        </div>
+        
       </div>
 
       <div id = "macaron-first-role" class = "sub-section">
@@ -141,9 +158,9 @@
           <span class="number-title">01</span>
           <div> <!-- for the text-->
             <h4>Highlighting the Product</h4>
-            <p>With the website's primary purpose to showcase macarons and to serve as a platform for selling these products. I focused primarily on highlighting 
-              product images throughout the entire website, while allocating other elements as subtle backdrops. </p>
-            <p>However, I still aimed to find ways to better integrate the brand’s hand-drawn cartoonish design as the site’s complementary visual language, 
+            <p>With the website's primary purpose to showcase macarons and to serve as a platform for selling these products. I focused primarily on <strong>highlighting 
+              product images throughout the entire website</strong>, while allocating other elements as subtle backdrops. </p>
+            <p>However, I still aimed to find ways to better integrate the <strong>brand’s hand-drawn cartoonish design as the site’s complementary visual language</strong>, 
               ensuring a cohesive look that enhances the brand’s unique identity.</p>
           </div>
         </div>
