--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
             </div>
           </div> <!-- closetshare -->
 
+          <div class = "project" id = "craftconnect">
+            <img id = "craft-picture" src="resources/craftconnect.png" alt="craftconnect title slide"></img>
+            <div class = "project-right">
+              <div class = "project-title">
+                <h2>CraftConnect</h2>
+                <p>/2024</p>
+              </div>
+              <p>Design aim to help artisans find and retain their unique customer base, a web platform concept that allows handcraft consumers to discover and connect with local artisans they like.</p>
+              <button class = "button" onclick="toCraftConnect()"> Explore </button>
+            </div>
+          </div> <!-- closetshare -->
+
           <div class = "project" id = "rabbitat">
             <img id = "rabbitat-picture" src="resources/rabbitat.png" alt="rabbitat poster picture"></img>
             <div class = "project-right">
