--- a/rabbitats.html
+++ b/rabbitats.html
@@ -70,12 +70,14 @@
 
         <div id = "project-brief-right"><!-- right side -->
           <h4>Tool Used </h4>
-          <ul>
-            <li>Figma</li>
-          </ul>
+          <div class = "list flex-area">
+            <ul>
+              <li>Figma</li>
+            </ul>
+          </div>
 
           <h4>My Role</h4>
-          <div class = "flex-area">
+          <div class = "list flex-area">
             <ul>
               <li>UI/UX Design</li>
               <li>User Research</li>
@@ -87,7 +89,7 @@
           </div>
 
           <h4>Project Members</h4>
-          <div id= "project-members" class = "flex-area">
+          <div class = "list flex-area">
             <ul>
               <li>Brian Luk</li>
               <li>Andrea So</li>
