--- a/macaron.html
+++ b/macaron.html
@@ -69,7 +69,7 @@
 
         <div id = "project-brief-right"><!-- right side -->
           <h4>Tool Used </h4>
-          <div class = "flex-area">
+          <div class = "list flex-area">
             <ul>
               <li>Figma</li>
               <li>HTML/CSS</li>
@@ -81,7 +81,7 @@
           </div>
           
           <h4>My Role</h4>
-          <div class = "flex-area">
+          <div class = "list flex-area">
             <ul>
               <li>UI/UX Design</li>
               <li>User Research</li>
@@ -93,7 +93,7 @@
           </div>
 
           <h4>Project Members</h4>
-          <div id= "project-members" class = "flex-area">
+          <div class = "list flex-area">
             <ul>
               <li>Kate Simeonoff</li>
             </ul> 
