Videos for craftconnect added

--- a/craftconnect.html
+++ b/craftconnect.html
@@ -236,16 +236,16 @@
         </p>
       </div>
       <!--right-->
-      <div class = "craftconnect-feature-video">
-        <video loop autoplay playsinline muted><source src="resources/macaron/landing-video.mp4"></video>
+      <div class = "craftconnect-feature-video image-with-frame">
+        <video loop autoplay playsinline muted><source src="resources/craftconnect/map navigation and filters.mp4"></video>
       </div>
      </div>
 
      <!--second-->
      <div class = "sub-section craftconnect-feature">
       <!--left-->
-      <div class = "craftconnect-feature-video">
-        <video loop autoplay playsinline muted><source src="resources/macaron/landing-video.mp4"></video>
+      <div class = "craftconnect-feature-video image-with-frame">
+        <video loop autoplay playsinline muted><source src="resources/craftconnect/search function.mp4"></video>
       </div>
       <!--right-->
       <div>
@@ -275,16 +275,16 @@
           </p>
         </div>
         <!--right-->
-        <div class = "craftconnect-feature-video">
-          <video loop autoplay playsinline muted><source src="resources/macaron/landing-video.mp4"></video>
+        <div class = "craftconnect-feature-video image-with-frame">
+          <video loop autoplay playsinline muted><source src="resources/craftconnect/notifications and calender.mp4"></video>
         </div>
        </div>
   
        <!--fourth-->
        <div class = "sub-section craftconnect-feature">
         <!--left-->
-        <div class = "craftconnect-feature-video">
-          <video loop autoplay playsinline muted><source src="resources/macaron/landing-video.mp4"></video>
+        <div class = "craftconnect-feature-video image-with-frame">
+          <video loop autoplay playsinline muted><source src="resources/craftconnect/booth interaction.mp4"></video>
         </div>
         <!--right-->
         <div>
