--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div id = "navigation-wrapper">
         <nav id="navigation">
-          <h2 id = "logo"><em>Howard</em> Chang</h2>
+          <h2 id="logo"><a href="index.html"><em>Howard</em> Chang</a></h2>
           <div class="navigation-items">
             <a href="index.html">My Works</a>
             <a href="index.html">About</a>
@@ -117,7 +117,7 @@
 
       <div id = "footer-content">
         <h2> Let's Get in Touch, and Create Something Together </h2>
-        <h4> howardchang822@hotmail.com <em>|</em> 778-822-6068 </h4>
+        <p> howardchang822@hotmail.com <em>|</em> 778-822-6068 </p>
 
         <div id = "footer-divider">
           <div id = "footer-divider-left">
@@ -126,7 +126,7 @@
             <a class = "social-logo" id="facebook-logo" href="https://www.facebook.com/corynigiri?mibextid=ZbWKwL"></a> 
           </div>
           <div id = "footer-divider-right">
-            <p>Designed by Howard Chang</p>
+            <p>Designed and Coded by Howard Chang</p>
           </div>
         </div>
       </div>
