--- a/craftconnect.html
+++ b/craftconnect.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
     <title>CraftConnect || Howard Chang </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
