--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang = "en">
 
   <head>
-
     <meta charset="utf-8">
-    <title>Home || Howard Chang </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home || Howard Chang</title>
     <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-
   </head>
 
   <body>
