--- a/macaron.html
+++ b/macaron.html
@@ -4,6 +4,7 @@
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Macaron Website Development || Howard Chang </title>
     <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
