Worked on closetshare page, and some UI adjustments

--- a/craftconnect.html
+++ b/craftconnect.html
@@ -219,21 +219,20 @@
         </p>
        </div>
      <!--feature list-->
-
      <!--first-->
      <div class = "sub-section grid-area craftconnect-feature">
       <!--left-->
-      <div>
-        <h2>
-          <span class="number-title">01</span> 
-          <span>Map Navigation and Filters</span>
-        </h2>
-        <p>
-          The Home page consists of the map view of all the artisans and avenues close to the user’s location, the information is split into 4 categories. (Markets, Shops, Artisans, and the user’s Subscriptions) 
-        </p>
-        <p>
-          Users can switch between each of the 4 filter categories, allowing them to discover new artisans individually or through avenues, and find out where artisans they love are selling.
-        </p>
+      <div class = "numbered-title-section">
+        <span class="number-title">01</span>
+        <div>
+          <h2>Map Navigation and Filters</h2>
+          <p>
+            The Home page consists of the map view of all the artisans and avenues close to the user’s location, the information is split into 4 categories. (Markets, Shops, Artisans, and the user’s Subscriptions) 
+          </p>
+          <p>
+            Users can switch between each of the 4 filter categories, allowing them to discover new artisans individually or through avenues, and find out where artisans they love are selling.
+          </p>
+        </div>
       </div>
       <!--right-->
       <div class = "craftconnect-feature-video image-with-frame">
@@ -248,31 +247,31 @@
         <video loop autoplay playsinline muted><source src="resources/craftconnect/search function.mp4"></video>
       </div>
       <!--right-->
-      <div>
-        <h2>
-          <span class="number-title">02</span> 
-          <span>Search Function</span>
-        </h2>
+      <div class = "numbered-title-section">
+        <span class="number-title">02</span> 
+        <div>
+          <h2>Search Function</h2>
         <p>
           I’ve also integrated a search feature in the map view that opens up a full list of artisans and avenues, allowing users to browse through the information in a list format and search using keywords.
         </p>
+        </div>
       </div>
      </div>
 
       <!--third-->
       <div class = "sub-section grid-area craftconnect-feature">
         <!--left-->
-        <div>
-          <h2>
-            <span class="number-title">03</span> 
-            <span>Notifications and Calender</span>
-          </h2>
-          <p>
-            Notifications can be found on the upper right side through the bell icon. Users can retrieve the most up to date information about the artisans they are following. 
-          </p>
-          <p>
-            A calendar feature is also available for users to keep track of event times for subscribed artisans. 
-          </p>
+        <div class = "numbered-title-section">
+          <span class="number-title">03</span> 
+          <div>
+            <h2>Notifications and Calender</h2>
+            <p>
+              Notifications can be found on the upper right side through the bell icon. Users can retrieve the most up to date information about the artisans they are following. 
+            </p>
+            <p>
+              A calendar feature is also available for users to keep track of event times for subscribed artisans. 
+            </p>
+          </div>
         </div>
         <!--right-->
         <div class = "craftconnect-feature-video image-with-frame">
@@ -287,30 +286,30 @@
           <video loop autoplay playsinline muted><source src="resources/craftconnect/booth interaction.mp4"></video>
         </div>
         <!--right-->
-        <div>
-          <h2>
-            <span class="number-title">04</span> 
-            <span>Booth Interactions</span>
-          </h2>
-          <p>
-            Upon clicking on the individual artisan icons, users will be directed to a booth page for that artisan. Here users can participate in a variety of interactions that is designed to facilitate connection between artisans and their costumers. 
-          </p>
-          <p>
-            The interactable objects include:
-          </p>
-          <div id = "craftconnect-interactable-object-list" class = "flex-area">
-            <ul>
-              <li>Profile</li>
-              <li>Calender</li>
-              <li>Product Shelf</li>
-            </ul>
-            <ul>
-              <li>Newsboard</li>
-              <li>Tip Jar</li>
-              <li>Notes Box</li>
-            </ul>
+        <div class = "numbered-title-section">
+          <span class="number-title">04</span> 
+          <div>
+            <h2>Booth Interactions</h2>
+            <p>
+              Upon clicking on the individual artisan icons, users will be directed to a booth page for that artisan. Here users can participate in a variety of interactions that is designed to facilitate connection between artisans and their costumers. 
+            </p>
+            <p>
+              The interactable objects include:
+            </p>
+            <div id = "craftconnect-interactable-object-list" class = "flex-area">
+              <ul>
+                <li>Profile</li>
+                <li>Calender</li>
+                <li>Product Shelf</li>
+              </ul>
+              <ul>
+                <li>Newsboard</li>
+                <li>Tip Jar</li>
+                <li>Notes Box</li>
+              </ul>
+            </div>
           </div>
-        </div>
+        </div> 
        </div>
 
        <!--final concept result-->
