--- a/macaron.html
+++ b/macaron.html
@@ -154,7 +154,7 @@
           <img id = "macaron-highlight-product" src="resources/macaron/macaron-highlighting-the-product.png" alt="page showcasing the highlighting of product"></img>
           <figcaption>Segment of the home page, demonstrating the highlighting of the product.</figcaption>
         </div>
-        <div id="macaron-first-role-content" class = "grid-area">
+        <div id="macaron-first-role-content" class = "numbered-title-section">
           <span class="number-title">01</span>
           <div> <!-- for the text-->
             <h2>Highlighting the Product</h2>
@@ -166,7 +166,7 @@
         </div>
       </div>
 
-      <div id = "macaron-second-role" class = "sub-section grid-area">
+      <div id = "macaron-second-role" class = "sub-section numbered-title-section">
         <span class="number-title">02</span>
         <div>
           <div id = "macaron-second-role-top">
@@ -194,7 +194,7 @@
           <img id = "macaron-highlight-product" src="resources/macaron/macaron-code-base.png" alt="css file used for the site"></img>
           <figcaption>The css file for the website, with clear sections and detailed comments.</figcaption>
         </div>
-        <div id = "macaron-third-role-content" class = "grid-area">
+        <div id = "macaron-third-role-content" class = "numbered-title-section">
           <span class="number-title">03</span>
           <div> <!-- for the text-->
             <h2>Organized Code System for Better Collaboration</h2>
