began working on wealthsimple project

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
             </div>
           </a> <!--closetshare-->
 
+          <a href="javascript:void(0);" class="project" id="wealthsimple" onclick="toWealthsimple()">
+            <img id="closet-picture" src="resources/wealthsimple.png" alt="wealthsimple title slide">
+            <div class="project-right">
+              <div class="project-title">
+                <h2>Wealthsimple Redesign Proposal</h2>
+                <p>/2024</p>
+              </div>
+              <p>A number of redesigns and proposed new features for the investing app Wealthsimple based on extensive HCI research. With the objective to encourage and support youth to invest early by reducing cognitive load throughout the app experience.</p>
+            </div>
+          </a> <!--wealthsimple-->
+
           <a href="javascript:void(0);" class="project" id="craftconnect" onclick="toCraftConnect()">
             <img id="craft-picture" src="resources/craftconnect.png" alt="craftconnect title slide">
             <div class="project-right">
