Finished Wealthsimple and some typography changes

--- a/wealthsimple.html
+++ b/wealthsimple.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wealthsimple Redesign Proposal || Howard Chang </title>
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -191,7 +192,7 @@
 
       <div id = "wealthsimple-research">
          <!--first-->
-      <div class = "sub-section grid-area">
+      <div class = "wealthsimple-research-element sub-section grid-area">
         <!--left-->
         <div class = "numbered-title-section">
           <span class="number-title">01</span>
@@ -216,7 +217,7 @@
       </div>
 
       <!--second-->
-      <div class = "sub-section grid-area">
+      <div class = "wealthsimple-research-element sub-section grid-area">
         <!--left-->
         <div class = "image-with-frame">
           <img src="resources/wealthsimple/wealthsimple unfamilarity of mental models.png" alt="Users are not familiar with existing investment related mental models"></img>
@@ -237,7 +238,7 @@
       </div>
 
         <!--third-->
-        <div class = "sub-section grid-area">
+        <div class = "wealthsimple-research-element sub-section grid-area">
           <!--left-->
           <div class = "numbered-title-section">
             <span class="number-title">03</span> 
@@ -262,7 +263,7 @@
         </div>
     
         <!--fourth-->
-        <div class = "sub-section grid-area">
+        <div class = "wealthsimple-research-element sub-section grid-area">
           <!--left-->
           <div class = "image-with-caption">
             <img src="resources/wealthsimple/wealthsimple confusing graph.png" alt="Screenshot of wealthsimple's portfolio performance graph"></img>
@@ -418,7 +419,7 @@
     <section id = "key-reflections">
       <h1>Key Reflections</h1>
       <div class = "sub-section">
-        <h2>Design Solutions Should be Based on Evidence</h2>
+        <h2>Design solutions should be based on evidence</h2>
         <p>
           For my design proposals that aims to ease investment learning curve and provide additional tools to support users during the 
           investment process, all solutions are evidence based, and results of extensive research of peer reviewed research. When 
@@ -427,7 +428,7 @@
         </p>
       </div>
       <div class = "sub-section">
-        <h2>Importance of “Unflattening” in Design</h2>
+        <h2>Importance of “unflattening” in design</h2>
         <p>
           Through this project, I experienced first hand the value in the idea of “unflattening”, taking information and knowledge from a 
           diverse set of fields, and combining them to for design solutions. During our research, we explored human cognition theories, 
